shopping-list-template.yml
api Version: v1
kind: Deployment
metadata:
  name: shopping-list-deployment
  annotations:
    version: 0.0.1-SNAPSHOT
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: shopping-list
        component: shopping-list
    spec:
      containers:
        - name: shopping-list
          image: shopping-list:0.0.1-SNAPSHOT
            ports:
            - containerPort: 8080
            - containerPort: 8443
          lifecycle:
            preStop:
              exec:
                # SIGTERM triggers a quick exit; gracefully terminate instead
                command: ["kill", "-SIGINT", "`pidof java`"]
          args:
            - /server
            livenessProbe:
              httpGet:
                path: /actuator/health/liveness
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 5
            readinessProbe:
              httpGet:
                path: /actuator/health/readiness
              initialDelaySeconds: 20
              periodSeconds: 10
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 128Mi
          environments:
            dev:
              url: jdbc:hsqldb:mem:testdb;sql.syntax_pgs=true
              name: Developer Setup
            prod:
              url: jdbc:postgresql://localhost:5432/postgres
              name: My Cool App
---
kind: Service
apiVersion: v1
metadata:
  name: shopping-list
  namespace: example
  annotations:
    service.beta.kubernetes.io/brightbox-load-balancer-healthcheck-request: /
spec:
  type: LoadBalancer
  selector:
    app: shopping-list
  ports:
    - name: http
       protocol: TCP
       port: 80
       targetPort: 8080
    - name: http
       protocol: TCP
       port: 443
       targetPort: 8433
---
api Version: v1
kind: Route
metadata:
  name: route-passthrough-secured
spec:
  host: www.example.com
  to:
    kind: Service
    name: shopping-list
  tls:
    termination: passthrough
